--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,9 @@
     "angular-tree-control": "^0.2.28",
     "angularMultipleSelect": "angular-multiple-select#^1.1.2",
     "angular-base64": "^2.0.5",
-    "angular-bootstrap-colorpicker": "^3.0.31"
+    "angular-bootstrap-colorpicker": "^3.0.31",
+    "moment": "^2.19.1",
+    "angular-moment": "^1.1.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0",
