--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,10 @@
     "angular-base64": "^2.0.5",
     "angular-bootstrap-colorpicker": "^3.0.31",
     "moment": "^2.19.1",
-    "angular-moment": "^1.1.0"
+    "angular-moment": "^1.1.0",
+    "angular-password": "^1.0.3",
+    "angular-validation-match": "^1.9.0",
+    "angular-recaptcha": "^4.1.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0",
